--- a/src-client/assets/app.css
+++ b/src-client/assets/app.css
@@ -53,3 +53,36 @@ body{
   z-index: 1;
   color: #4f5b66;
 }
+
+.btn {
+  font-size: 28px;
+  height: 70px;
+  line-height: 70px;
+  padding: 0 70px;
+  border-radius: 4px;
+  background-color: #7b72e9;
+  border-color: #7b72e9;
+  color: #666666;
+  background-color: #eeeeee;
+  border-color: #eeeeee;
+  font-weight: 300;
+  font-size: 16px;
+  font-family: "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  text-decoration: none;
+  text-align: center;
+  line-height: 40px;
+  height: 40px;
+  padding: 0 40px;
+  margin: 0;
+  display: inline-block;
+  appearance: none;
+  cursor: pointer;
+  border: none;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-transition-property: all;
+  transition-property: all;
+  -webkit-transition-duration: .3s;
+  transition-duration: .3s;  
+}
